# Time-Series-Visualization-and-Analysis

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: finance1000.cloud.json  generic_wide_csv.json
docs/: agent_skill.md  finance1000_report.md
docs/workflows/: zero_baseline_loss_landscape.md
modern_tsf_visualizer/: __init__.py  cli.py
references/: data_schema.md
reports/finance1000/: manifest.json  summary.json
reports/timesfm_all_results_20260618/: index.html  manifest.json  timesfm_log_return_failure_report.md
reports/zero_baseline_q05q95_1000tickers/: close_log_return_epsilon_ladder_pivot.csv  close_log_return_metric_corr.csv  close_log_return_metric_corr_mean.csv  close_log_return_metric_overlap.csv  close_log_return_metric_overlap_mean.csv  close_log_return_ticker_meta.csv  close_log_return_zero_summary.csv  intro_report.html  report.json  volume_log_return_epsilon_ladder_pivot.csv  volume_log_return_metric_corr.csv  volume_log_return_metric_corr_mean.csv  volume_log_return_metric_overlap.csv  volume_log_return_metric_overlap_mean.csv  volume_log_return_ticker_meta.csv  volume_log_return_zero_summary.csv
reports/zero_baseline_q05q95_100tickers/: all_ticker_meta.csv  close_log_return_epsilon_ladder.csv  close_log_return_epsilon_ladder_pivot.csv  close_log_return_metric_corr.csv  close_log_return_metric_corr_mean.csv  close_log_return_metric_overlap.csv  close_log_return_metric_overlap_mean.csv  close_log_return_ticker_meta.csv  intro_report.html  (+10 more)
scripts/: build_figure_first_pdf.py  run_finance1000_cloud.sh  run_visual_report.py
(+7 files in other folders)
